@@ -23,3 +23,5 @@ Changes to graphapp, fixing a bug (from 2.15.2).
 Take extra/tzone from 2.15.3.
 
 Take extra/xdr from 3.1.1.
+
+Updates to src/gnuwin32 taken from 2.15.1 and 3.0.0.
