@@ -146,21 +146,21 @@ dllversion.o: ../include/Rversion.h
 
 R.dll: $(OBJS) $(OBJS-EXTRA) $(MAINLIBS) $(EXTRALIBS) dllversion.o
 	@$(ECHO) EXPORTS > R.def
-	@$(NM) $^ | $(SED) -n  $(SYMPAT)  | $(SORT) | uniq > R0.def
+	@$(NM) $^ | $(SED) -n  $(SYMPAT) | LC_COLLATE=C $(SORT) | uniq > R0.def
 ifeq "$(WIN)" "64"
-	@$(SED) -e's/@.*//' Rdll.hide | $(SORT) > R1.def	
+	@$(SED) -e's/@.*//' Rdll.hide | LC_COLLATE=C $(SORT) > R1.def	
 else
-	@$(SORT) <Rdll.hide >R1.def
+	@LC_COLLATE=C $(SORT) <Rdll.hide >R1.def
 endif
-	@$(COMM) -23 R0.def R1.def >> R.def
+	@comm -23 R0.def R1.def >> R.def
 	$(DLL) -shared $(DLLFLAGS) $($*-DLLFLAGS) -o $@ R.def $^ $($*-DLLLIBS) $(DLLLIBS)
 	@$(RM) R.def R0.def R1.def
 
 R.exp: $(OBJS) $(OBJS-EXTRA) $(MAINLIBS) $(EXTRALIBS) dllversion.o
 	@$(ECHO) LIBRARY R.dll > R.exp
 	@$(ECHO) EXPORTS >> R.exp
-	@$(NM) $^ | $(SED) -n $(SYMPAT) | $(SORT) | uniq > R0.def
-	@$(COMM) -23 R0.def Rdll.hide >> R.exp
+	@$(NM) $^ | $(SED) -n $(SYMPAT) | LC_COLLATE=C $(SORT) | uniq > R0.def
+	@comm -23 R0.def Rdll.hide >> R.exp
 	@$(RM) R0.def
 
 
