@@ -75,7 +75,7 @@
 <h2>Material specific to the Windows port</h2>
 <table cols="2" width="100%">
 <tr>
-<td align="center" width="50%"><a href="CHANGES.html">CHANGES</a></td>
+<td align="center" width="50%"><a href="CHANGES.html">CHANGES up to R 2.15.0</a></td>
 <td align="center" width="50%"> <a href="rw-FAQ.html">Windows FAQ</a> </td>
 <td></td>
 </tr>
